<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#100F0F"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/speed_meter"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/speed_calculator"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="#ACA7A7"
        android:backgroundTint="#A69B9B"
        android:ems="10"
        android:text="@string/ma"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#A69B9B"
        android:ems="10"
        android:text="@string/time"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal2"
        app:layout_constraintVertical_bias="0.486" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal2"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="188dp"
        android:layout_height="31dp"
        android:text="@string/average_speed_km_h"
        android:textAlignment="center"
        android:textColor="#D30707"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/clear" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="221dp"
        android:layout_height="37dp"
        android:layout_marginBottom="28dp"
        android:background="#FFFFFF"
        android:textAlignment="center"
        android:textColor="#090808"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal2"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="126dp"
        android:layout_height="88dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662"
        app:srcCompat="@drawable/red_cow"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>